force-app/main/default/objects/Platform_Event__e/Platform_Event__e.object-meta.xml
<CustomObject>
    <description>CloudEvents-compliant unified HighVolume platform event for SObject lifecycle observability via Dynatrace Salesforce Insights. Single canonical event replacing Platform_Usages__e; covers Usage__c, Exception__c, and future tracked objects. Published via PlatformEventService.</description>
    <label>Platform Event</label>
    <pluralLabel>Platform Events</pluralLabel>
</CustomObject>