force-app/main/default/objects/Platform_Event__e/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <description>CloudEvents: JSON-serialised snapshot of the full SObject record (JSON.serialize(record)). Truncated at 20,000 chars with ...[TRUNCATED] suffix if payload exceeds limit. Carries the event payload; CloudEvents envelope fields carry the metadata.</description>
    <label>Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>