force-app/main/default/objects/Platform_Event__e/fields/dataschema__c.field-meta.xml
<CustomField>
    <fullName>dataschema__c</fullName>
    <description>CloudEvents: URI identifying the schema that the data field adheres to.</description>
    <label>Data Schema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>