force-app/main/default/objects/Platform_Event__e/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>CloudEvents: URI identifying the event producer. Set to the Salesforce org domain URL at publish time.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>