force-app/main/default/objects/Platform_Event__e/fields/specversion__c.field-meta.xml
<CustomField>
    <fullName>specversion__c</fullName>
    <description>CloudEvents: Version of the CloudEvents specification. Always set to 1.0.</description>
    <label>Spec Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>