force-app/main/default/objects/Platform_Event__e/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <description>CloudEvents: Subject of the event in the context of the producer. Set to the SObject record Id.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>