force-app/main/default/objects/Platform_Event__e/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <description>CloudEvents: Timestamp of when the event occurred. Set to System.now() at publish time.</description>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>