force-app/main/default/objects/Platform_Event__e/fields/traceflags__c.field-meta.xml
<CustomField>
    <fullName>traceflags__c</fullName>
    <description>W3C TraceContext: 2-character hex sampling flags (e.g. 01). Set by Dynatrace tracing agent.</description>
    <label>Trace Flags</label>
    <length>8</length>
    <type>Text</type>
</CustomField>