force-app/main/default/objects/Platform_Event__e/fields/traceid__c.field-meta.xml
<CustomField>
    <fullName>traceid__c</fullName>
    <description>W3C TraceContext: 32-character hex trace ID identifying the distributed trace. Set by Dynatrace tracing agent.</description>
    <label>Trace ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>