force-app/main/default/objects/Platform_Event__e/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>CloudEvents: Describes the type of event (e.g. com.animuscrm.usage.created, com.animuscrm.exception.created).</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>