force-app/main/default/objects/Platform_Event__e/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <description>W3C TraceContext: Trace context version. Always 00 per current W3C specification.</description>
    <label>Trace Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>